--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
 
 <body>
 
-    <nav class="navigation">
-
-        <div class="content-container">
+    <nav>
+        <!-- <div class="break"></div> -->
+        <div class="list">
             <div class="contents"><a href="#">About me</a></div>
             <div class="contents"><a href="#">Academics</a></div>
             <div class="contents"><a href="#">Skills</a></div>
             <div class="contents"><a href="#">Get in touch</a></div>
+            
         </div>
         <div class="hamburger"><i class="fa-solid fa-bars fa-xl" style="color: #f7f7f7;"></i></div>
+            
     </nav>
     <header class="intro">
 
@@ -71,23 +73,58 @@
         </div>
         <div class="c-right">
             <span class="about-me-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iste, adipisci voluptas, rerum dolore praesentium numquam nisi porro nostrum ipsa id ad necessitatibus quod repudiandae! Placeat nostrum dicta, voluptates, quia officia et fugiat praesentium similique officiis quisquam sapiente omnis quod.
+                I'm doing my Bachelors of technology in <b>computer science and engineering</b> from Graphic era hill
+                university Dehradun .
+                I recently started my 3rd year / 5th semester . This page contains all that you need to kow
+                about me.
+                Scroll down and I hope you love it !
             </span>
         </div>
     </section>
 
     <section class="academics">
         <div class="panel college active ">
-            <div class="heading horiz" >College</div>
-            <div class="heading-content show"><p class="show-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas officiis commodi id consectetur quibusdam quos, earum enim dignissimos, dolores cupiditate veniam ex eligendi unde esse! Ea voluptatum, et nostrum ipsam, vitae possimus non sapiente enim inventore incidunt neque harum atque dolores, odit sint temporibus quidem labore eum sed. Quae ipsum ipsa deleniti assumenda. Ab vitae praesentium ullam error excepturi amet a similique beatae nostrum corporis cumque, itaque repellat, fugiat minima.</p></div>
+            <div class="heading horiz">College</div>
+            <div class="heading-content show">
+                <p class="show-content">
+                <h2>
+                    Graphic era Hill University
+                </h2>
+                <h3>Dehradun , Uttarakhand</h3>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">CGPA : </span> 8.6</p>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Current Year : </span> 3</p>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Current semester : </span>5</p>
+
+                </p>
+            </div>
         </div>
         <div class="panel inter  ">
             <div class="heading div-not-active">Intermediate</div>
-            <div class="heading-content" ><p class="show-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo placeat nulla expedita earum voluptate, reiciendis aspernatur, accusantium, quisquam eaque magni hic itaque corporis laborum saepe quos. Neque, reiciendis eos fuga quam optio laudantium eveniet velit labore consectetur eum placeat expedita maiores quas excepturi tempore facilis sint? Dolor repellat, nesciunt accusantium doloribus reprehenderit rem error est sint quidem earum fuga eius non excepturi sit debitis iusto quis ullam et, harum amet.</p></div>
+            <div class="heading-content">
+                <p class="show-content">
+                <h2>
+                    G.S Convent School
+                </h2>
+                <h3>Affiliated to CBSE</h3>
+                <h3>Sitarganj, U.S.Nagar, Uttarakhand</h3>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Percentage : </span> 89%</p>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Year of passing: </span> 2020</p>
+                </p>
+            </div>
         </div>
         <div class="panel high-schl  ">
             <div class="heading div-not-active">HighSchool</div>
-            <div class="heading-content"><p class="show-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias quibusdam voluptatibus voluptatum nulla dolorum adipisci quam dolor impedit, iure quidem maiores excepturi tenetur delectus sit, aliquid laborum distinctio error velit pariatur assumenda vel animi commodi veniam! Nulla reprehenderit eligendi accusantium iure totam itaque error, omnis inventore laboriosam, dolore quia nemo sed consectetur cumque aperiam dolor assumenda, at corporis sequi eum. Saepe dolorem adipisci voluptatibus itaque veniam qui odit libero non!</p></div>
+            <div class="heading-content">
+                <p class="show-content">
+                <h2>
+                    Shelley School
+                </h2>
+                <h3>Affiliated to CBSE</h3>
+                <h3>Sitarganj, U.S.Nagar, Uttarakhand</h3>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Percentage : </span> 91%</p>
+                <p><span style="font-size: 1.2rem; font-weight: bold;">Year of passing: </span> 2018</p>
+                </p>
+            </div>
         </div>
     </section>
 
